Kannasta lukeminen alkaa toimia symfonyn kanssa, eihän siihen menny ku viikko

--- a/src/Apex/ApexScoreCardBundle/Resources/views/Round/new.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Round/new.html.twig
@@ -3,6 +3,11 @@
 {% block body -%}
     <h1>Round creation</h1>
 
+	{% for courses in course %}
+		<span>{{ courses.id }} {{ courses.courseName }}</span>
+	{% endfor %}
+	
+
     <form action="{{ path('round_create') }}" method="post" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
         <p>
