--- a/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
+++ b/src/Apex/ApexScoreCardBundle/Resources/public/css/styles.css
@@ -44,8 +44,8 @@ body {
 }
 	
 
-#header .ui-btn { margin: 0px; padding: 0px; top: 0px; width: 40px; height: 40px; border-radius: 8px; }
-#header .ui-btn-inner { border: 0px; padding: 0px; margin-top: 8px; margin-left: 8px;}
+#header .ui-btn { margin: 0px; padding: 0px; top: 5px; width: 44px; height: 34px; border-radius: 8px; }
+#header .ui-btn-inner { border: 0px; padding: 0px; margin-top: 6px; margin-left: 10px;}
 #header .ui-btn-text { font-size: 1.2em, }
 
 
@@ -156,21 +156,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 	font-size: 3em !important;
 	width: 100%;
 	text-align: center;
-	font-family: "Lucida Grande", arial;
+	font-family: verdana, arial;
 	float: left;
 	margin-top: 10px;
+	font-weight: bold;
 //	color: #fcfcfc;
-	color: black;
+	color: #333;
 //	text-shadow: -0px -1px 2px #eee, 1px 2px 2px #000;
-	text-shadow: -0px -1px 0px #eee, 1px 2px 2px #eee;
+	text-shadow: -1px -1px 2px #fff, 1px 1px 2px #fff;
 }
 
 #footer {
 	width: 100%;
-	height: 40px;
+	height: 38px;
 	position: fixed;
-	bottom: 0px;
 	padding: 1px;
+	padding-bottom: 0px !important;
+	bottom: 0px;
 	margin: 0px;
 	}
 	
@@ -192,10 +194,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 #f_footer .ui-btn { padding: 0px; margin: 0px; border:0px; height: 38px;}
 	
 		
-#footer .ui-btn { margin: 0px; padding: 0px; top: 0px; width: 40px; height: 40px; border-radius: 8px;  border-color : transparent; box-shadow: none; background:transparent}
-#footer .ui-btn-inner { border: 0px; padding:0px; margin-top: 8px; margin-left: 8px;}
-#footer .ui-btn-text { font-size: 1.2em, }
-
+#footer .ui-btn { margin: 0px; padding: 0px; top: 0px; width: 40px; height: 38px; border-radius: 0px;  border-color : transparent; box-shadow: none; background:transparent}
+#footer .ui-btn-inner { border: 0px; padding:0px; margin-top: 6px; margin-left: 8px;}
 
 #sliderWrappi {
 	top: 10px;
@@ -245,7 +245,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e1e1e', end
 	outline: none;
 	border-radius: 0px !important;
 	border: 0px;
-	background:url('img/handlenew.png');
+	background:url('../images/handle.png');
 	background-repeat: no-repeat;
 	background-size: 100%;
 	margin-left: -50px !important;
