--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -8,12 +8,14 @@
     <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
 
     <script src="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.js"></script>
+    <script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
 	
     <script src="{{ asset('bundles/apexscore/js/app.js') }}"></script>
 	
     <link href="{{ asset('bundles/apexscore/css/mobiscroll-2.4.1.custom.min.css') }}" rel="stylesheet" type="text/css" />
 	<script src="{{ asset('bundles/apexscore/js/mobiscroll-2.4.1.custom.min.js') }}"> type="text/javascript"></script>
 
+	
 	<script type="text/javascript">
 		$.mobile.changePage.defaults.allowSamePageTransition = true;
         $.mobile.ignoreContentEnabled = true;
@@ -59,12 +61,8 @@
 		</div>
 	
 	
-<!--	
-	
 	<div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div>
 	 
-	-->
-	
 	
 		<div id="f_courseList" style="display: none">
 			<ul data-role="listview" data-theme="a">
@@ -329,11 +327,14 @@
 	
 		<div id="mainPrefs">
 			<h5>Handicap</h5>
+			<span>{{ golfers.handicap }}</span>
 		
 			<div id="prefsPlayerHcp" style="background:transparent; text-align: center" data-enhance="false"> 
 				<input id="i" style="display: none"
 				data-bind="value: playerExactHcp" />
 			</div>
+			
+				<div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div>
 			
 			<div id="tees">
 				<h5>Default tee</h5>
@@ -345,7 +346,7 @@
 					<input type="radio" name="radio1" id="tees_blue" value="blue" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
 					<label for="tees_blue" style="border-color: blue" id="prefsTees">Blue</label>
 
-					<input type="radio" name="radio1" id="tees_yellow" value="yellow" checked="checked" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
+					<input type="radio" name="radio1" id="tees_yellow" value="yellow"  data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
 					<label for="tees_yellow" style="border-color: yellow" id="prefsTees">Yellow</label>
 
 					<input type="radio" name="radio1" id="tees_white" value="white" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
