--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -23,13 +23,12 @@
 
 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.css" />
-	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/styles_front.css') }}" type="text/css" media="screen" rel="stylesheet" />  
 	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/styles.css') }}" type="text/css" media="screen" rel="stylesheet" />
 
 	
 <!--	<link rel="stylesheet" href="VilleSpecial.min.css"/> -->
 
-	<meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1.0; minimum-scale=0.5; user-scalable=1;" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=0.5, user-scalable=1" />
 	<meta name="apple-mobile-web-app-capable" content="yes" /> 
 	<meta name="apple-mobile-web-app-status-bar-style" content="white" />  
 	
@@ -42,13 +41,12 @@
 	
 		<div id="header" data-role="header" data-theme="b" data-position="fixed">
 
-				<a href="#prefs" data-role="button" data-icon="gear" data-iconpos="notext" id="prefsButton"></a>
+				<a href="#" data-role="button" data-icon="gear" data-iconpos="notext" id="prefsButton" data-bind="click: loadPrefs"></a>
 
 			<div id="headerText">Rounds</div>
-				<a href="#courseSelect"  data-rel="dialog" data-role="button" data-icon="plus" id="newRoundButton" data-iconpos="notext"></a>
+				<a href="#courseSelect" data-rel="dialog" data-role="button" data-icon="plus" id="newRoundButton" data-iconpos="notext"></a>
 		</div>
 		
-		<!-- data-bind="click: loadCourseSelect" -->
 		
 		<div id="f_roundList">
 			<div id="scrollWrapper">
@@ -56,19 +54,20 @@
 					<li><a href="#"><span data-bind="text: course"></span><span style="font-size: 75%"> / Score: 
 						<span  data-bind="text: score"></span> Points <span data-bind="text: points"></span></a>
 					</li>
-				</ul>
+				</ul> 
+				
 			</div>
 		</div>
 	
 	
-	<div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div>
+<!--	<div style="color: black; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div> -->
 	 
 	
 		<div id="f_courseList" style="display: none">
-			<ul data-role="listview" data-theme="a">
+		<!--	<ul data-role="listview" data-theme="a">
 				<li><a href="#"> <span data-bind="text: courseName"></span> <span style="font-size: 75%" data-bind="text: coursePar"></span></a>
 				</li>
-			</ul>
+			</ul> -->
 		</div>		
 	
 		<div id="f_footer" data-theme="a" data-role="footer">
@@ -334,22 +333,22 @@
 				data-bind="value: playerExactHcp" />
 			</div>
 			
-				<div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div>
+<!--				<div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div> -->
 			
 			<div id="tees">
 				<h5>Default tee</h5>
 
 				<fieldset data-role="controlgroup" data-mini="true" data-type="horizontal" data-theme="e">
-					<input type="radio" name="radio1" id="tees_red" value="red" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
+					<input type="radio" name="red" id="tees_red" value="red" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
 					<label for="tees_red" style="border-color: red" id="prefsTees">Red</label>
 
-					<input type="radio" name="radio1" id="tees_blue" value="blue" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
+					<input type="radio" name="blue" id="tees_blue" value="blue" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
 					<label for="tees_blue" style="border-color: blue" id="prefsTees">Blue</label>
 
-					<input type="radio" name="radio1" id="tees_yellow" value="yellow"  data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
+					<input type="radio" name="yellow" id="tees_yellow" value="yellow"  data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
 					<label for="tees_yellow" style="border-color: yellow" id="prefsTees">Yellow</label>
 
-					<input type="radio" name="radio1" id="tees_white" value="white" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
+					<input type="radio" name="white" id="tees_white" value="white" data-bind="checked: playerDefaultTee, mobileradio: playerDefaultTee" />
 					<label for="tees_white" style="border-color: white" id="prefsTees">White</label>
 				</fieldset>
 			</div>
@@ -366,26 +365,20 @@
 			
 			<span style="font-size: 6px" data-bind="text: playerGender"></span>
 			
-		</div>
+		</div> 
 	</div>
 </div>
 
-<div id="courseSelect" data-role="page" page-title="New round" data-theme="b">
+<div id="courseSelect" data-role="page" data-title="New round" data-theme="b">
 	<div id="scrollWrapperi">
-		<ul data-role="listview" data-filter="true" data-filter-placeholder="Choose course..." id="courseList">
-			<li><a href="#s_page">Muurame Golf <span style="font-size: 75%">par 71 ja muuta sellasta tietoa</a></li>
-			<li><a href="#">Laukaan Peurunkagolf</a></li>
-			<li><a href="#">Augusta National</a></li>
-			<li><a href="#">Cypress Point</a></li>
-			<li><a href="#">Houston Country Club</a></li>
-			<li><a href="#">Merion Cricket Club</a></li>
-			<li><a href="#">Winged Foot</a></li>
-		</ul>
-	</div>
+	<ul data-role="listview" data-filter="true" data-filter-placeholder="Choose course..." id="courseList" data-bind="mobileList: courseList, foreach: courseList">
+		<li><a href="#" data-bind="click: $root.startNewRound.bind($data, id)"><span data-bind="text: name"></span></a></li>
+	</ul>
 	<div id="c_footer">
 		<div id="courseSelectCancelButton">
 			<a href="#f_page" data-role="button" id="cancelButton" data-icon="delete" data-theme="a">Cancel</a>
 		</div>
+	</div>
 	</div>
 </div>		
 
