--- a/src/Apex/ApexScoreCardBundle/Resources/views/Default/global.js.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/Default/global.js.twig
@@ -47,8 +47,20 @@ var ApexEventProxy = function() {
     self.proxy = new ControllerProxy();
     
     self.getGolferData = function(data, done, always, fail){
-        self.proxy.post('{{ path('golfer_json')}}', data, done, fail, always);
+        self.proxy.post('{{ path('golfer_json_get')}}', data, done, fail, always);
     };
+    
+    self.saveGolferData = function(data, done, always, fail) {
+        self.proxy.post('{{path('golfer_json_set')}}', data, done, fail, always);
+    };
+
+	self.getCourseList = function (data, done, always, fail) {
+		 self.proxy.post('{{path('course_json_get')}}', data, done, fail, always);
+    };
+    
+    self.startNewRound = function (data, done, always, fail) {
+    	self.proxy.post('{{path('round_json_new')}}', data, done, fail, always);
+	};
 
 };
 var apexEventProxy = new ApexEventProxy();
