--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -4,62 +4,83 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-2.2.1.js"></script>
 
-    <script src="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.js"></script>
-    <script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
-	
-    <script src="{{ asset('bundles/apexscore/js/app.js') }}"></script>
+
+
+
 	
     <link href="{{ asset('bundles/apexscore/css/mobiscroll-2.4.1.custom.min.css') }}" rel="stylesheet" type="text/css" />
-	<script src="{{ asset('bundles/apexscore/js/mobiscroll-2.4.1.custom.min.js') }}"> type="text/javascript"></script>
 
+	<script src="{{ asset('bundles/apexscore/js/mobiscroll-2.4.1.custom.min.js') }}"></script> 
+
+
+<!--	<script src="{{ asset('bundles/apexscore/js/iscroll.js') }}"> </script> -->
+<!--	<script src="{{ asset('bundles/apexscore/js/jquery.mobile.iscrollview.js') }}"> </script>  -->
+	
+	
+	<script src="{{ asset('bundles/apexscore/js/moment.min.js') }}"> </script>
 	
 	<script type="text/javascript">
 		$.mobile.changePage.defaults.allowSamePageTransition = true;
         $.mobile.ignoreContentEnabled = true;
 	</script>
 
-
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0-beta.1/jquery.mobile-1.3.0-beta.1.min.css" />
 	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/styles.css') }}" type="text/css" media="screen" rel="stylesheet" />
-
 	
-<!--	<link rel="stylesheet" href="VilleSpecial.min.css"/> -->
+	<link rel="stylesheet" href="{{ asset('bundles/apexscore/css/jquery.mobile.iscrollview.css') }}" type="text/css" media="screen" rel="stylesheet" />
+
+<!--    <script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/apexscore/js/app.js') }}"></script> -->
+
+
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, minimum-scale=0.5, user-scalable=1" />
 	<meta name="apple-mobile-web-app-capable" content="yes" /> 
 	<meta name="apple-mobile-web-app-status-bar-style" content="white" />  
-	
-	
 
 </head>
-
 <body>
+
+{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+
+    <script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
+    <script src="{{ asset('bundles/apexscore/js/app.js') }}"></script>
+
+                
 	<div id="f_page" data-role="page" data-title="Rounds">
 	
 		<div id="header" data-role="header" data-theme="b" data-position="fixed">
 
 				<a href="#" data-role="button" data-icon="gear" data-iconpos="notext" id="prefsButton" data-bind="click: loadPrefs"></a>
 
-			<div id="headerText">Rounds</div>
+			<div id="headerText">Rounds for {{ app.user.username }}</div>
 				<a href="#courseSelect" data-rel="dialog" data-role="button" data-icon="plus" id="newRoundButton" data-iconpos="notext"></a>
 		</div>
 		
 		
-		<div id="f_roundList">
-			<div id="scrollWrapper">
-				<ul data-role="listview" data-theme="d" data-bind="mobileList: roundList, foreach: roundList"> 
-					<li><a href="#"><span data-bind="text: course_name">&nbsp;</span><span style="font-size: 75%"> / Id: 
-						<span  data-bind="text: id"></span></a>
+		<div id="f_roundList" class="wrap" data-role="content" data-iscroll>
+<!--			<div id="scrollWrapper"> -->
+				<ul id ="roundList" data-role="listview" data-theme="d" data-bind="mobileList: roundList, foreach: roundList"> 
+
+
+					<li><a href="#" data-bind="click: $root.loadRound.bind($data, id)"><span data-bind="text: course_name">&nbsp;</span><span style="font-size: 75%"> /  
+						<span  data-bind="text: moment(start_time.date).calendar()"></span></a>
 					</li>
 				</ul> 
-			</div>
+<!--			</div> -->
 		</div>
 	
+<!--	<script type="text/javascript">
+		$('#roundList').listview('refresh');
+		$('#f_roundList').listview('refresh');
+	</script> -->
 	
-	<div style="color: black; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div> 
+	
+<!--	<div style="color: black; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div> -->
 	 
 	
 		<div id="f_courseList" style="display: none">
@@ -69,14 +90,14 @@
 			</ul> -->
 		</div>		
 	
-		<div id="f_footer" data-theme="a" data-role="footer">
+<!--		<div id="f_footer" data-theme="a" data-role="footer">
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#roundList" id="roundButton" data-role="button" class="ui-btn-active ui-state-persist">Rounds</a></li>
 					<li><a href="#courseList" id="courseButton" data-role="button">Courses</a></li>
 				</ul>
 			</div>
-		</div>
+		</div> -->
 		
 		<script>
 		$("#roundButton").click(function () {
@@ -106,7 +127,7 @@
 			<span style="font-size: 75%">/ Hcp  <span data-bind="text: currentHoleHcp" ></span></span>
 		</div>
 
-		<a href="#scoreCard"  data-role="button" data-rel="dialog" data-icon="grid" data-iconpos="notext"></a>
+		<a href="#scoreCard"  data-role="button" data-rel="dialog" data-icon="grid" data-iconpos="notext" data-close-btn="none" ></a>
 		
 	</div>
 
@@ -148,7 +169,7 @@
 		<div id="leftFill" class="ui-block-a"></div>
 		<div id="sliderW" class="ui-block-b">
 			<div id="slideri">
-				<input type="range" data-bind="value: sliderVal, slider: sliderVal,  event: { change: setScore, slidestop: resetSlider }" name="scoreSlider" id="scoreSlider" min="-100" max="100" /> 
+				<input type="range" data-bind="value: sliderVal, slider: sliderVal,  event: { change: sliderMove, slidestop: resetSlider }" name="scoreSlider" id="scoreSlider" min="-100" max="100" /> 
 
 			</div>
 		</div>
@@ -172,7 +193,7 @@
 			</div>
 			<div id="2" class="ui-block-b">
 				Player: <span id="player" data-bind="text: playerName"></span><br>
-				Handicap: <span id="playerhcp" data-bind="text: playerExactHcp"></span><br>
+				Handicap: <span id="playerhcp" data-bind="text: round_hcp"></span><br>
 				Course handicap: <span id="playerplayhcp" data-bind="text: playerPlayingHcp"></span><br>
 <!--				Current round: <span id="currentRoundTopar" data-bind="text: roundScoreToPar"></span> -->
 			</div>
@@ -193,7 +214,7 @@
 </div>	
 	
 	
-<div id="scoreCard" data-role="page">
+<div id="scoreCard" data-role="page" data-close-btn="none">
 
 
 	<div data-theme="c" data-role="header" id="dialogHeader">
@@ -304,7 +325,7 @@
 			</div>
 		
 			<div id="scoreCardButtons">
-				<a href="#" data-role="button" id="scoreCardShare" data-mini="true">Share</a>
+				<a href="#" data-role="button" id="scoreCardShare" data-mini="true" >Share</a>
 				<a href="#s_page" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-mini="true"  id="scoreCardClose">Close</a>
 			</div>
 	</div>
@@ -353,7 +374,7 @@
 				<label for="gender">
 					<h5>Gender</h5>
 				</label>
-				<select name="gender" id="gender" data-role="slider" data-theme="b" data-track-theme="c" data-bind="value: playerGender, jqmOptions: playerGenders" data-mini="true" >
+				<select name="gender" id="gender" data-role="slider" data-theme="b" data-track-theme="c" data-bind="jqmOptions: playerGenders, value: playerGender" data-mini="true">
 					<option>Male</option>
 					<option>Female</option>
 				</select> 
@@ -365,10 +386,17 @@
 	</div>
 </div>
 
+<!--	<script type="text/javascript">
+		$('#prefs').live('pagecreate', function(event) {
+			var sel = $("select#gender");
+			sel.selectmenu("refresh");
+		});
+	</script> -->
+
 <div id="courseSelect" data-role="page" data-title="New round" data-theme="b">
-	<div id="scrollWrapperi">
+	<div id="scrollWrapperi" data-iscroll">
 	<ul data-role="listview" data-filter="true" data-filter-placeholder="Choose course..." id="courseList" data-bind="mobileList: courseList, foreach: courseList">
-		<li><a href="#" data-bind="click: $root.startNewRound.bind($data, id)"><span data-bind="text: name"></span></a></li>
+		<li><a href="#" data-bind="click: $root.startNewRound.bind($data, id, name)"><span data-bind="text: name"></span></a></li>
 	</ul>
 	<div id="c_footer">
 		<div id="courseSelectCancelButton">
@@ -378,6 +406,14 @@
 	</div>
 </div>		
 
+{% else %}
+<div>
+
+              <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+              
+              
+
+{% endif %}
 	
 
 </body>
