--- a/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
+++ b/src/Apex/ApexScoreCardBundle/Resources/views/App/index.html.twig
@@ -47,80 +47,55 @@
 
 {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 
-    <script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
-    <script src="{{ asset('bundles/apexscore/js/app.js') }}"></script>
+<script src="{{ path('GlobalJs') }}" type="text/javascript"></script>
+<script src="{{ asset('bundles/apexscore/js/app.js') }}"></script>
 
                 
-	<div id="f_page" data-role="page" data-title="Rounds">
+<div id="f_page" data-role="page" data-title="Rounds">
 	
-		<div id="header" data-role="header" data-theme="b" data-position="fixed">
+	<div id="header" data-role="header" data-theme="b" data-position="fixed">
 
-				<a href="#" data-role="button" data-icon="gear" data-iconpos="notext" id="prefsButton" data-bind="click: loadPrefs"></a>
+			<a href="#" data-role="button" data-icon="gear" data-iconpos="notext" id="prefsButton" data-bind="click: loadPrefs"></a>
 
-			<div id="headerText">Rounds for {{ app.user.username }}</div>
+		<div id="headerText">Rounds for {{ app.user.username }}</div>
 				<a href="#courseSelect" data-rel="dialog" data-role="button" data-icon="plus" id="newRoundButton" data-iconpos="notext"></a>
-		</div>
+	</div>
 		
+
+<script type="text/javascript">
+moment.lang('en', {
+	longDateFormat : {
+		LT: "HH:mm",
+		L: "MM/DD/YYYY",
+        l: "M/D/YYYY",
+        LL: "MMMM Do YYYY",
+        ll: "MMM D YYYY",
+        LLL: "MMMM Do YYYY LT",
+        lll: "MMM D YYYY LT",
+        LLLL: "dddd, MMMM Do YYYY LT",
+        llll: "ddd, MMM D YYYY LT"
+    }
+});
+
+</script>
 		
-		<div id="f_roundList" class="wrap" data-role="content" data-iscroll>
+	<div id="f_roundList" class="wrap" data-role="content" data-iscroll>
 <!--			<div id="scrollWrapper"> -->
-				<ul id ="roundList" data-role="listview" data-theme="d" data-bind="mobileList: roundList, foreach: roundList"> 
+			<ul id ="roundList" data-role="listview" data-theme="d" data-bind="mobileList: roundList, foreach: roundList"> 
 
-
-					<li><a href="#" data-bind="click: $root.loadRound.bind($data, id)"><span data-bind="text: course_name">&nbsp;</span><span style="font-size: 75%"> /  
+				<li><a href="#" data-bind="click: $root.loadRound.bind($data, id)"><span data-bind="text: course_name">&nbsp;</span><span style="font-size: 75%"> /  
 						<span  data-bind="text: moment(start_time.date).calendar()"></span></a>
-					</li>
-				</ul> 
+				</li>
+			</ul> 
 <!--			</div> -->
 		</div>
-	
-<!--	<script type="text/javascript">
-		$('#roundList').listview('refresh');
-		$('#f_roundList').listview('refresh');
-	</script> -->
-	
-	
-<!--	<div style="color: black; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div> -->
-	 
-	
-		<div id="f_courseList" style="display: none">
-		<!--	<ul data-role="listview" data-theme="a">
-				<li><a href="#"> <span data-bind="text: courseName"></span> <span style="font-size: 75%" data-bind="text: coursePar"></span></a>
-				</li>
-			</ul> -->
-		</div>		
-	
-<!--		<div id="f_footer" data-theme="a" data-role="footer">
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#roundList" id="roundButton" data-role="button" class="ui-btn-active ui-state-persist">Rounds</a></li>
-					<li><a href="#courseList" id="courseButton" data-role="button">Courses</a></li>
-				</ul>
-			</div>
-		</div> -->
-		
-		<script>
-		$("#roundButton").click(function () {
-			$("#courseList").hide();
-			$("#roundList").show();
-			
-		});
-		
-		$("#courseButton").click(function () {
-			$("#roundList").hide();
-			$("#courseList").show();
-		});
-		</script>
-
 	</div>
 	
 	
 
 <div id="s_page" data-role="page" data-title="Round in progress" data-theme="b">
 
-
 	<div id="header" data-role="header" data-theme="b" data-position="fixed">
-
 		<a href="#f_page" data-role="button" data-icon="home" data-iconpos="notext" 		 data-bind="click: leaveRound"></a>
 
 		<div id="headerText">Hole <span data-bind="text: currentHole"></span> - Par <span data-bind="text: currentHolePar"></span>
@@ -176,12 +151,8 @@
 		<div id="rightFill" class="ui-block-c"></div>
 	</div>
 
-
-
 <!-- <div style="color: white; text-shadow: 0 0 0 #000, 0 0 0 #000" data-bind="text: ko.toJSON($data)"></div> -->
 
-
-	
 	<div id="holeData">
 		<div  class="ui-grid-a">
 			<div id="1" class="ui-block-a">
@@ -195,11 +166,9 @@
 				Player: <span id="player" data-bind="text: playerName"></span><br>
 				Handicap: <span id="playerhcp" data-bind="text: round_hcp"></span><br>
 				Course handicap: <span id="playerplayhcp" data-bind="text: playerPlayingHcp"></span><br>
-<!--				Current round: <span id="currentRoundTopar" data-bind="text: roundScoreToPar"></span> -->
 			</div>
 		</div>
 	</div>
-
 
 
 	<div id="footer" data-role="footer" data-theme="a" data-position="fixed">
@@ -216,17 +185,12 @@
 	
 <div id="scoreCard" data-role="page" data-close-btn="none">
 
-
 	<div data-theme="c" data-role="header" id="dialogHeader">
-
 			<span id="scCourse" data-bind="text: courseName"></span>&nbsp;
 			<span id="scPlayer" data-bind="text: playerName"></span>&nbsp;
 <!--			<span id="scPlayerHcp" data-bind="text: playerExactHcp"></span> -->
 			<span id="scStartTime" data-bind="text: roundStartTime"></span>
-
 	</div>
-
-	
 
 	<div data-theme="b" data-role="content" id="dialogContent">
 	
@@ -345,7 +309,7 @@
 	
 		<div id="mainPrefs">
 			<h5>Handicap</h5>
-			<div id="prefsPlayerHcp"> 
+			<div id="prefsPlayerHcp" data-enhance="false"> 
 				<input id="i" style="display: none"
 				data-bind="value: playerExactHcp" />
 			</div>
@@ -369,7 +333,7 @@
 					<label for="tees_white" style="border-color: white" id="prefsTees">White</label>
 				</fieldset>
 			</div>
-			
+<!--			
 			<div id="gender">
 				<label for="gender">
 					<h5>Gender</h5>
@@ -380,7 +344,7 @@
 				</select> 
 			</div>
 			
-			<span style="font-size: 6px" data-bind="text: playerGender"></span>
+			<span style="font-size: 6px" data-bind="text: playerGender"></span> -->
 			
 		</div> 
 	</div>
